--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <main class="container">
 
     <section class="left-box">
-      <img src="c:\Users\NAYLA\Downloads\warkop.png" />
+      <img src="img/imgwarkop.png" />
     </section>
 
     <section class="right-box">
